Faltaba la validacion del email

--- a/HTML+CSS+BOOTSTRAP/informacion.html
+++ b/HTML+CSS+BOOTSTRAP/informacion.html
@@ -75,7 +75,7 @@
                             </div>
                         </div>
                     </div>
-                    <input class="form-control mt-2" type="mail" name="mail" placeholder="Email" required>
+                    <input class="form-control mt-2" type="email" name="email" placeholder="Email" required>
                     <div class="invalid-feedback">
                         Debe ingresar un Email
                     </div>
