Actividad: Adivinanza JavaScript

--- a/Adivinanza JavaScript/informacion.html
+++ b/Adivinanza JavaScript/informacion.html
@@ -34,6 +34,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="informacion.html">Quienes Somos?</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="adivinanza.html">ADIVINANZA</a>
                         </li>   
                 </ul>
                 </div>  
