Detalle responsive adivinanza.html

--- a/Adivinanza JavaScript/adivinanza.html
+++ b/Adivinanza JavaScript/adivinanza.html
@@ -45,7 +45,7 @@
     </header>
 
     <div class="container mb-2">
-        <p class="h1 text-center display-2 font-weight-bold font-italic">¿Con que profesion se relaciona generalmente a los ovejeros alemanes?</p>
+        <p class="text-center display-3 font-weight-bold font-italic">¿Con que profesion se relaciona generalmente a los ovejeros alemanes?</p>
         <p class="display-3 text-center">Tienes <span class="font-weight-bold" id="attempts"></span> intentos</p>
         <p class="bg-primary text-center font-weight-bold display-4" id="help-1"></p>
         <p class="bg-primary text-center font-weight-bold display-4" id="help-2"></p>       
